--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,8 @@
   --gray: #e0e0e0e0;
   --deep-gray: #8f8f8f;
   --blue: #3f51b5;
+  --red-30: rgba(255, 0, 0, 30%);
+  --red-50: rgba(255, 0, 0, 50%);
 }
 $black-area-height: 50px;
 $container-area-padding: 30px;
