--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,6 +14,9 @@ body {
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-.pointer {
-  cursor: pointer;
+.relative {
+  position: relative;
+}
+.absolute {
+  position: absolute;
 }
